tests/integration/errors/struct_collision/pkg_a.sn
# Helper for test_struct_name_collision_cross_file.sn
# Declares a StringField struct — intentionally colliding with pkg_b.sn.

struct StringField =>
  key: str
  value: str

fn pkgAGreet(): str => "hello from pkg_a"
